# cell-conquest

./: .gitignore  AI_WORKER_BLUEPRINT.md  CLAUDE.md  GAMEPLAY_OVERHAUL_PLAN.md  NARRATIVE_CAMPAIGN.md  PERF_ROADMAP.md  build_notebook.py  build_notebook_fine.py  cell_env.py  cell_policy.onnx  cell_policy.onnx.data  export_onnx.py  index.html  node-conquest.html  serve.py  train_fast.py  train_fine.ipynb  train_full.ipynb  train_full.py  train_league.py  train_league_fast.py
assets/: README.md  manifest.json
js/: ads.js  ai-build.js  ai-context.js  ai-effects.js  ai-logistics.js  ai-strategic.js  ai-tactical.js  ai-worker-bridge.js  ai-worker.js  ai.js  alliance.js  atmosphere-sim.js  audio.js  camera.js  campaign.js  capacity.js  combat.js  config.js  drones.js  engineering.js  factions.js  fleets.js  fog.js  game-presets.js  input.js  lobby.js  main.js  map-cartography.js  nn.js  player-logistics.js  render-atmosphere.js  render-borders.js  render-daynight.js  render-entities.js  render-fleets.js  render-fog.js  render-hud.js  render-minimap.js  render-node-carto.js  render-node-detail.js  (+28 more)
js/gpu/: drone-buffers.js  drone-render.js  gpu-device.js  swarm.js
wasm/: .gitignore  Cargo.toml  build.sh
wasm/pkg/: cell_sim.d.ts  cell_sim.js  cell_sim_bg.wasm  cell_sim_bg.wasm.d.ts  package.json
wasm/src/: lib.rs
